server/openshift/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapscreen-server
  labels:
    app: snapscreen-server
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    deploymentconfig: snapscreen-server
